# recsys-challenge-2024-ekstrabladet

./: .gitignore  README.md  click_predictor_preprocessing.py  data-exploration-behaviors.ipynb  parallel_1.py  pyproject.toml  requirements.txt
configuration_files/: best_params_autoint.json  best_params_deepfm.json  best_params_nfm.json  catboost_128f.json  catboost_baseline_new_features.json  catboost_classifier_recsys_best.json  catboost_new_mv.json  catboost_new_noK_trial_172.json  catboost_params.json  catboost_ranker_baseline.json  catboost_ranker_baseline_new_features.json  catboost_ranker_new_noK_95.json  deep_cross_new_noK_67.json  deep_cross_tuning_new_trial_67.json  deep_cross_tuning_new_trial_67_early_stopped.json  deep_cross_tuning_new_trial_67_early_stopped_with_pre.json  gandalf_new_noK_130.json  gandalf_tuning_new_trial_130.json  gandalf_tuning_new_trial_130_early_stopped.json  gandalf_tuning_new_trial_130_early_stopped_with_pre.json  lightgbm_128_from_demo.json  lightgbm_128f.json  lightgbm_64f.json  lightgbm_cls_recsys_trial_107.json  lightgbm_new_noK_29.json  lightgbm_new_noK_trial_289.json  lightgbm_new_noK_trial_289_half_iter.json  lightgbm_new_noK_trial_289_high_split_gain.json  lightgbm_params.json  lightgbm_ranker_baseline_new_features.json  lightgbm_ranker_new_noK_457.json  lightgbm_ranker_recsys_trial_219.json  mlp_new_noK_208.json  mlp_tuning_new_trial_208.json  mlp_tuning_new_trial_208_early_stopped.json  mlp_tuning_new_trial_208_early_stopped_long.json  mlp_tuning_new_trial_208_early_stopped_long_with_pre.json  mlp_tuning_new_trial_66.json  models_stacking.json  stack_cat_cls_224_noF.json  (+10 more)
(+380 files in other folders)
