[project]
name = "polimi-recsys-2024"
description = "RecSys Challenge 2024"
version = "0.0.1"
authors = [
    { name = "Lorenzo Campana", email = "lorecampa99@gmail.com" }
]
requires-python = ">=3.10, <3.12"
dependencies = [
    "numpy>=1.24.0",
    "colorama==0.4.6",
    "contourpy==1.2.1",
    "cycler==0.12.1",
    "filelock==3.13.4",
    "fonttools==4.51.0",
    "fsspec==2024.3.1",
    "Jinja2==3.1.3",
    "joblib==1.4.0",
    "kiwisolver==1.4.5",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.5",
    "matplotlib==3.8.4",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "networkx==3.3",
    "packaging==24.0",
    "pandas>=2.2.2",
    "pillow==10.3.0",
    "polars>=0.20.21",
    "psutil==5.9.8",
    "Pygments==2.17.2",
    "pyparsing==3.1.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "PyYAML==6.0.1",
    "rich==13.7.1",
    "scikit-learn>=1.4.2",
    "scipy>=1.13.0",
    "seaborn==0.13.2",
    "six==1.16.0",
    "sympy==1.12",
    "threadpoolctl==3.4.0",
    "torch==2.2.2",
    "tqdm>=4.66.2",
    "typing_extensions==4.11.0",
    "tzdata==2024.1",
    "optuna>=3.6.1",
    "simsimd>=4.3.1",
    "PyMySQL==1.1.0",
    "Cython==0.29.23",
    "optuna-dashboard==0.15.1",
    "jupyter",
    "ipywidgets",
    "tensorflow>=2.15.0",
    "python-dotenv>=1.0.1",
    "catboost>=1.2.5",
    "nltk>=3.8.1",
    "rgf-python==3.12.0",
    "xgboost==2.0.3",
    "catboost==1.2.5",
    "pyarrow==16.0.0",
    "fastparquet==2024.2.0",
    "numba==0.59.1",
    "lightgbm==4.3.0",
    "deepctr_torch>=0.2.9"
]